# backend/validator/card_statement_validator.go
@@ -8,6 +8,8 @@ import (
 
 type ICardStatementValidator interface {
 	ValidateCardStatementRequest(request model.CardStatementRequest) error
+	ValidateCardStatementPreviewRequest(request model.CardStatementPreviewRequest) error
+	ValidateCardStatementSaveRequest(request model.CardStatementSaveRequest) error
 }
 
 type cardStatementValidator struct{}
@@ -22,6 +24,30 @@ func (csv *cardStatementValidator) ValidateCardStatementRequest(request model.Ca
 			&request.CardType,
 			validation.Required.Error("card_type is required"),
 			validation.In("rakuten", "mufg", "epos").Error("card_type must be one of: rakuten, mufg, epos"),
+		),
+	)
+}
+
+func (csv *cardStatementValidator) ValidateCardStatementPreviewRequest(request model.CardStatementPreviewRequest) error {
+	return validation.ValidateStruct(&request,
+		validation.Field(
+			&request.CardType,
+			validation.Required.Error("card_type is required"),
+			validation.In("rakuten", "mufg", "epos").Error("card_type must be one of: rakuten, mufg, epos"),
+		),
+	)
+}
+
+func (csv *cardStatementValidator) ValidateCardStatementSaveRequest(request model.CardStatementSaveRequest) error {
+	return validation.ValidateStruct(&request,
+		validation.Field(
+			&request.CardType,
+			validation.Required.Error("card_type is required"),
+			validation.In("rakuten", "mufg", "epos").Error("card_type must be one of: rakuten, mufg, epos"),
+		),
+		validation.Field(
+			&request.CardStatements,
+			validation.Required.Error("card_statements is required"),
 		),
 	)
 }
